--- a/css/estilos.css
+++ b/css/estilos.css
@@ -123,7 +123,7 @@ body{
 .titulo-container{
   width: 100%;
   height: 15%;
-  color: #b42a17;
+  color: #00aeff;
   border-radius: 1rem;
 }
 .titulo-container h1{
